# micro_mayhem

./: .gitignore  CMakeLists.txt  README.md  resources.rc
assets/data/: amoeba.json  bacteriophage.json
assets/shaders/: pixelizer.fs  radial_gradient.fs
src/: combat_system.c  custom_fonts.c  custom_fonts.h  game_scene.c  game_scene.h  main.c  moveset_loader.c
